Fix Mapping import and robust action type coercion

--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -54,6 +54,12 @@ model:
   algo: "ppo"
   params: {}
 
+algo:
+  actions:
+    lock_price_offset: true
+    lock_ttl: true
+    fixed_type: MARKET
+
 quantizer:
   filters_path: "data/binance_filters.json"
   # strict_filters=true → строго придерживаться актуальных фильтров; false включает мягкий фолбек к кешу/легаси-логике.
