--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -52,7 +52,17 @@ data:
 
 model:
   algo: "ppo"
-  params: {}
+  params:
+    cql_alpha: 0.0
+    cql_beta: 1.0
+    cvar_alpha: 0.0
+    cvar_weight: 0.0
+    use_torch_compile: false
+
+    # Параметры головы ценности:
+    num_atoms: 11   # можно 1 (обычная ценность), 11 — компромисс; >51 обычно не нужно
+    v_min: -1.0     # нижняя граница поддержки ценности
+    v_max: 1.0      # верхняя граница (v_max > v_min)
 
 algo:
   actions:
