--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -5,16 +5,15 @@ artifacts_dir: artifacts
 seasonality_log_level: INFO
 execution_profile: MKT_OPEN_NEXT_H1
 execution_params:
-  slippage_bps: 0.0
-  limit_offset_bps: 0.0  # e.g. 25 for 0.25% offset when using LIMIT_MID_BPS
-  ttl_steps: 0           # e.g. 5 to cancel after 5 simulation steps
-  tif: GTC               # e.g. IOC or FOK
+  limit_offset_bps: 0.0
+  ttl_steps: 0
+  tif: GTC
 execution:
   mode: bar
-  entry_mode: default         # Entry mode for fills; ``default`` mirrors the legacy simulator behaviour.
-  clip_to_bar:                # Controls clipping of simulated prices to the observed bar range.
-    enabled: true             # Keep prices within [low, high] of the current bar (legacy behaviour).
-    strict_open_fill: false   # Force clipped open-price fills when true; false keeps legacy logic.
+  entry_mode: next_bar_open
+  clip_to_bar:
+    enabled: true
+    strict_open_fill: true
 execution_config:
   notional_threshold: 10000.0
   large_order_algo: TWAP
@@ -34,7 +33,7 @@ liquidity_seasonality_override_path: null
 # values clamped to [0.1, 10.0])
 latency_seasonality_path: "data/latency/liquidity_latency_seasonality.json"
 # Set false to ignore liquidity and latency multipliers
-use_seasonality: true
+use_seasonality: false
 
 market: spot
 
@@ -70,6 +69,8 @@ algo:
     lock_ttl: true
     fixed_type: MARKET
     long_only: true            # <-- ВКЛЮЧАЕМ лонг-онли из конфига
+  action_wrapper:
+    bins_vol: 21
 
 quantizer:
   filters_path: "data/binance_filters.json"
@@ -81,40 +82,12 @@ quantizer:
   refresh_on_start: false
 
 fees:
-  path: null                     # Путь к JSON/YAML с ставками по символам; null → использовать data/fees/fees_by_symbol.json.
-  refresh_days: null             # Каденс проверки устаревания таблицы (в днях); null отключает проверку (по умолчанию).
-  maker_bps: 1.0                 # Базовая ставка мейкера в bps, когда нет записей в таблице (дефолт 1.0).
-  taker_bps: 5.0                 # Базовая ставка тейкера в bps, когда нет записей в таблице (дефолт 5.0).
-  use_bnb_discount: false        # Применять ли VIP-скидки Binance/BNB; false → множители остаются 1.0 (дефолт).
-  maker_discount_mult: 1.0       # Принудительный множитель скидки мейкера; null → авто (1.0 или 0.75 при скидке).
-  taker_discount_mult: 1.0       # Принудительный множитель скидки тейкера; null → авто (1.0 или 0.75 при скидке).
-  vip_tier: null                 # Номер VIP-уровня (int) для табличных ставок; null → использовать значения по умолчанию.
-  maker_share_default: null      # Override базовой доли maker [0..1]; null → использовать 0.5 из блока maker_taker_share.
-  spread_cost_maker_bps: null    # Override доп. издержек maker (bps) при разделении потока; null → 0.0 по умолчанию.
-  spread_cost_taker_bps: null    # Override доп. издержек taker (bps) при разделении потока; null → 0.0 по умолчанию.
-  taker_fee_override_bps: null   # Жёсткий override тейкерской комиссии (bps) после скидок; null → без override.
+  use_bnb_discount: false
+  maker_bps: 1.0
+  taker_bps: 5.0
   rounding:
-    enabled: true               # Включить округление комиссий; false → возвращать сырые значения без пост-обработки.
-    step: null                  # Override шага округления (например 0.0001); null → использовать commission_step из фильтров/таблицы.
-    mode: "up"                 # Режим относительно шага: up (ceil, дефолт Binance) | nearest | down.
-    minimum_fee: null           # Минимальная комиссия после округления; null → без нижней границы.
-    maximum_fee: null           # Максимальная комиссия после округления; null → без верхней границы.
-  settlement:
-    enabled: false              # Платить комиссии альтернативным активом (например, BNB); false → оставаться в котируемой валюте.
-    mode: null                  # Жёсткий режим расчёта (bnb/quote/auto); null → авто по аккаунту или таблице комиссий.
-    currency: null              # Код валюты расчёта (например, "BNB"); null → использовать mode/значения биржи.
-    prefer_discount_asset: false  # true → запрашивать скидочную валюту при доступности; false → без приоритета.
-  maker_taker_share:
-    enabled: false               # Включить расчёт доли maker/taker; false → использовать maker_share_default.
-    mode: "fixed"                # Режим: fixed | model | predictor; fixed → всегда брать maker_share_default.
-    maker_share_default: 0.5     # Базовая доля maker, когда модель неактивна/нет фичей (дефолт 0.5).
-    spread_cost_maker_bps: 0.0   # Доп. издержки maker (bps) сверх комиссии при активном разделе потока.
-    spread_cost_taker_bps: 0.0   # Доп. издержки taker (bps) сверх комиссии при активном разделе потока.
-    taker_fee_override_bps: null # Опциональный override тейкерской комиссии (bps) в активном режиме.
-    model:
-      distance_to_mid: null      # Фича distance-to-mid в bps или блок {value,min,max,fallback}; null → не используется.
-      latency: null              # Фича latency в мс или блок {value,min,max,fallback}; null → не используется.
-      coefficients: {}           # Линейные коэффициенты модели (intercept, distance_to_mid, latency, …); пусто = дефолт.
+    enabled: true
+    mode: up
 
 slippage:
   k: 0.8
@@ -181,12 +154,12 @@ slippage:
     liquidity_buffer: 1.0    # Доп. буфер ликвидности (>1 увеличивает оценку доступного ADV).
 
 latency:
-  use_seasonality: true          # Enable hourly latency multipliers
-  latency_seasonality_path: null # Optional override; defaults to global latency_seasonality_path
-  refresh_period_days: 30        # Refresh cadence for latency multipliers (days)
-  seasonality_default: 1.0       # Fallback multiplier when seasonality data is unavailable
-  base_ms: 250
-  jitter_ms: 50
+  use_seasonality: false
+  base_ms: 0
+  jitter_ms: 0
+  latency_seasonality_path: null
+  refresh_period_days: 30
+  seasonality_default: 1.0
   spike_p: 0.01
   spike_mult: 5.0
   timeout_ms: 2500
@@ -194,16 +167,7 @@ latency:
   seed: 0  # RNG seed; seasonality multipliers do not affect RNG state
 
 risk:
-  enabled: true
-  max_abs_position_qty: 0.0
-  max_abs_position_notional: 0.0
-  max_order_notional: 0.0
-  max_orders_per_min: 60
-  max_orders_window_s: 60
-  daily_loss_limit: 0.0
-  pause_seconds_on_violation: 300
-  daily_reset_utc_hour: 0  # Час начала нового дня в UTC для PnL и дневных лимитов
-  max_entries_per_day: null  # Максимум новых входов за день; null/-1 = без лимита (счёт по daily_reset_utc_hour, UTC)
+  enabled: false
 
 # See ../docs/no_trade.md for details
 no_trade:
