Use configured v_range_ema_alpha

--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -73,6 +73,7 @@ model:
     num_atoms: 21   # можно 1 (обычная ценность), 11 — компромисс; >51 обычно не нужно
     v_min: -0.2     # нижняя граница поддержки ценности
     v_max: 0.2      # верхняя граница (v_max > v_min)
+    v_range_ema_alpha: 0.01
 
 algo:
   actions:
