Fix rollout buffer types

--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -57,6 +57,11 @@ model:
     gae_lambda: 0.95
     clip_range: 0.15
     ent_coef: 0.001
+    ent_coef_final: 0.001
+    ent_coef_decay_steps: 0
+    ent_coef_plateau_window: 0
+    ent_coef_plateau_tolerance: 0.0
+    ent_coef_plateau_min_updates: 0
     vf_coef: 0.5
     max_grad_norm: 0.5
     n_steps: 1024
