--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -52,7 +52,7 @@ data:
 model:
   algo: "ppo"
   params:
-    learning_rate: 3.0e-4
+    learning_rate: 1.0e-4
     gamma: 0.99
     gae_lambda: 0.95
     clip_range: 0.15
@@ -65,7 +65,12 @@ model:
     vf_coef: 0.5
     max_grad_norm: 0.5
     n_steps: 1024
+    n_epochs: 3
     batch_size: 256
+    target_kl: 0.02
+    kl_lr_decay: 0.5
+    kl_epoch_decay: 0.5
+    kl_lr_scale_min: 0.1
     trade_frequency_penalty: 0.0
     turnover_penalty_coef: 0.0
     cql_alpha: 1.0
