--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -52,29 +52,29 @@ data:
 model:
   algo: "ppo"
   params:
-    learning_rate: 1.0e-5
+    learning_rate: 3.0e-4              # ближе к рабочему дефолту PPO
     gamma: 0.99
     gae_lambda: 0.95
-    clip_range: 0.03
-    ent_coef: 0.0001
-    ent_coef_final: 0.00005
-    ent_coef_decay_steps: 80
+    clip_range: 0.10                   # не душим обновления (0.1–0.2 норма)
+    ent_coef: 0.002                    # дайте политике «подышать»
+    ent_coef_final: 0.0002
+    ent_coef_decay_steps: 400          # плавнее убывание (≈ первые 30% апдейтов)
     ent_coef_plateau_window: 24
     ent_coef_plateau_tolerance: 0.002
     ent_coef_plateau_min_updates: 40
     vf_coef: 0.5
     max_grad_norm: 0.5
-    n_steps: 1024
-    n_epochs: 1
-    batch_size: 512
-    microbatch_size: 512
+    n_steps: 2048                      # больше контекста/стабильнее Â
+    n_epochs: 4                        # разумный компромисс вместо 1
+    batch_size: 64                     # типичный минибатч для PPO
+    microbatch_size: 64
     seed: 20240518
-    target_kl: 0.5
-    kl_lr_decay: 0.5
-    kl_epoch_decay: 0.5
-    kl_lr_scale_min: 0.01
+    target_kl: null                    # выключить ранние стопы по KL
+    kl_lr_decay: 1.0                   # не душить LR «за KL»
+    kl_epoch_decay: 1.0
+    kl_lr_scale_min: 0.10              # даже если включится — не в ноль
     trade_frequency_penalty: 0.0
-    turnover_penalty_coef: 0.0
+    turnover_penalty_coef: 0.0015      # SPOT/BAR: мягко душим лишний оборот
     cql_alpha: 0.0
     cql_beta: 5.0
     cvar_alpha: 0.05
