--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -69,7 +69,7 @@ model:
     batch_size: 64                     # типичный минибатч для PPO
     microbatch_size: 64
     seed: 20240518
-    target_kl: null                    # выключить ранние стопы по KL
+    target_kl: 1.5                     # не даём KL уплывать слишком далеко, но без null
     kl_lr_decay: 1.0                   # не душить LR «за KL»
     kl_epoch_decay: 1.0
     kl_lr_scale_min: 0.10              # даже если включится — не в ноль
@@ -90,6 +90,23 @@ model:
     v_min: -0.2     # нижняя граница поддержки ценности
     v_max: 0.2      # верхняя граница (v_max > v_min)
     v_range_ema_alpha: 0.005
+
+env:
+  decision_timing: CLOSE_TO_OPEN
+  no_trade:
+    enabled: false         # полностью отключаем блокировки на трейне
+    policy: ignore
+  session:
+    calendar: crypto_24x7
+    pre_open_keepout_bars: 0
+    post_close_keepout_bars: 0
+  liquidity:
+    min_adv_usd: 0
+    min_bar_quote_volume: 0
+  spreads:
+    max_spread_bps: 1000000000
+  warmup:
+    bars: 0
 
 optimization:
   scheduler:
