Move bar execution cost settings into fees

--- a/configs/config_live.yaml
+++ b/configs/config_live.yaml
@@ -23,6 +23,7 @@ execution_params:
   tif: GTC               # e.g. IOC or FOK
 execution:
   mode: bar
+  enabled: false
 timing:
   enforce_closed_bars: true
   timeframe_ms: 60000
