--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -10,7 +10,10 @@ execution_params:
   tif: GTC
 execution:
   mode: bar
-  entry_mode: next_bar_open
+  enabled: true
+  spot_only: true
+  fill_policy: next_open_market   # close_t → open_{t+1}
+  entry_mode: default
   clip_to_bar:
     enabled: true
     strict_open_fill: true
@@ -131,9 +134,12 @@ quantizer:
   refresh_on_start: false
 
 fees:
+  path: "data/fees/fees_by_symbol.json"
   use_bnb_discount: false
   maker_bps: 1.0
-  taker_bps: 5.0
+  taker_bps: 10.0
+  half_spread_bps: 5.0
+  impact_coeff: 0.0
   rounding:
     enabled: true
     mode: up
