--- a/configs/config_train_spot_bar.yaml
+++ b/configs/config_train_spot_bar.yaml
@@ -16,16 +16,19 @@ data:
   val_end_ts: 1704067199
 
 execution:
-  mode: bar
   enabled: true
-  spot_only: true
-  fill_policy: next_open_market   # close_t → open_{t+1}
+  mode: bar
+
+no_trade:
+  enabled: false
+  cooldown_bars: 0
+  block_when_low_liquidity: false
+
+liquidity:
+  adv_min_share: 0.0
 
 fees:
-
   path: "data/fees/fees_by_symbol.json"
-
-
   taker_bps: 10.0
   half_spread_bps: 5.0
   impact_coeff: 0.0
@@ -33,6 +36,17 @@ fees:
 model:
   algo: "ppo"
   params: {}
+
+algo:
+  actions:
+    long_only: true
+  action_wrapper:
+    fixed_type: MARKET
+    lock_price_offset: true
+    fixed_price_offset_ticks: 0
+    lock_ttl: true
+    fixed_ttl_steps: 0
+    bins_vol: 6
 
 components:
   market_data:
