Disable raw value clipping when returns are normalized

--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -60,6 +60,8 @@ model:
     ent_coef_plateau_tolerance: 0.002
     ent_coef_plateau_min_updates: 40
     vf_coef: 0.5
+    # Явно отключаем «raw» лимит ценности (чтобы политика не подставляла ±max(|v_min|,|v_max|)):
+    value_clip_limit: null
     vf_coef_warmup: 0
     vf_coef_warmup_updates: 0
     vf_bad_explained_scale: 1.0
