--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -75,6 +75,7 @@ model:
     seed: 20240518
     target_kl: 0.02                    # агрессивно контролируем дивергенцию
     kl_early_stop: true
+    kl_exceed_stop_fraction: 0.25      # стопим эпоху, если ≥25% батчей вышли за target_kl
     kl_lr_decay: 1.0                   # не душить LR «за KL»
     kl_epoch_decay: 1.0
     kl_lr_scale_min: 0.10              # даже если включится — не в ноль
