--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -73,10 +73,11 @@ model:
     batch_size: 64                     # типичный минибатч для PPO
     microbatch_size: 64
     seed: 20240518
-    target_kl: 0.02                    # агрессивно контролируем дивергенцию
+    target_kl: 0.03                    # агрессивно контролируем дивергенцию
     kl_early_stop: true
-    kl_exceed_stop_fraction: 0.25      # стопим эпоху, если ≥25% батчей вышли за target_kl
-    kl_lr_decay: 1.0                   # не душить LR «за KL»
+    kl_exceed_stop_fraction: 0.03      # стопим эпоху, если ≥3% батчей вышли за target_kl
+    kl_lr_decay: 0.5                   # не душить LR «за KL»
+    kl_penalty_beta: 0.05              # включаем KL-пенализацию по умолчанию
     kl_epoch_decay: 1.0
     kl_lr_scale_min: 0.10              # даже если включится — не в ноль
     trade_frequency_penalty: 0.0
