--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -73,13 +73,22 @@ model:
     batch_size: 64                     # типичный минибатч для PPO
     microbatch_size: 64
     seed: 20240518
-    target_kl: 0.05                    # агрессивно контролируем дивергенцию
+    # target_kl можно переопределить через вложенный блок algo.params.kl
     kl_early_stop: true
-    kl_exceed_stop_fraction: 0.10      # стопим эпоху, если ≥3% батчей вышли за target_kl
-    kl_lr_decay: 0.7                   # не душить LR «за KL»
-    kl_penalty_beta: 0.02              # включаем KL-пенализацию по умолчанию
+    kl_exceed_stop_fraction: 0.10      # стопим эпоху, если ≥10% батчей вышли за target_kl
     kl_epoch_decay: 1.0
-    kl_lr_scale_min: 0.20              # даже если включится — не в ноль
+    kl:
+      target_kl: 0.08
+      use_lr_decay: false
+      penalty:
+        type: adaptive_beta
+        beta_init: 0.01
+        pid:
+          kp: 0.5
+          ki: 0.05
+          kd: 0.10
+          beta_min: 1.0e-4
+          beta_max: 1.0
     optimizer_lr_min: 5.0e-6
     trade_frequency_penalty: 0.0
     turnover_penalty_coef: 0.0005      # ≈ комиссия 5 bps в долях
