--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -48,6 +48,8 @@ data:
 
 model:
   algo: "ppo"
+  optimizer_lr_min: &default_min_lr 5.0e-6
+  scheduler_min_lr: *default_min_lr
   params:
     learning_rate: 3.0e-4              # ближе к рабочему дефолту PPO
     gamma: 0.99
@@ -89,7 +91,7 @@ model:
           kd: 0.10
           beta_min: 1.0e-4
           beta_max: 1.0
-    optimizer_lr_min: 5.0e-6
+    optimizer_lr_min: *default_min_lr
     trade_frequency_penalty: 0.0
     turnover_penalty_coef: 0.0005      # ≈ комиссия 5 bps в долях
     reward_return_clip: 10.0           # Лимит лог-доходности
