--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -55,9 +55,10 @@ model:
     gamma: 0.99
     gae_lambda: 0.95
     clip_range: 0.10                   # не душим обновления (0.1–0.2 норма)
-    ent_coef: 0.00129248               # scaled by ln(6)/ln(4) to preserve entropy weight
-    ent_coef_final: 0.0002585
+    ent_coef: 0.001
+    ent_coef_final: 0.001
     ent_coef_decay_steps: 400          # плавнее убывание (≈ первые 30% апдейтов)
+    ent_coef_min: 0.0005
     ent_coef_plateau_window: 24
     ent_coef_plateau_tolerance: 0.002
     ent_coef_plateau_min_updates: 40
