--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -129,12 +129,14 @@ model:
     v_max: 0.2      # верхняя граница (v_max > v_min)
     v_range_ema_alpha: 0.005
     value_scale:
-      ema_beta: 0.25
+      ema_beta: 0.9
       max_rel_step: 0.35
       std_floor: 0.01
       window_updates: 8
       warmup_updates: 6
-      freeze_after: 96
+      freeze_after_updates: null
+      never_freeze: true
+      max_change_pct: 0.10
       range_max_rel_step: 0.25
       stability:
         min_explained_variance: 0.15
