--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -145,6 +145,19 @@ model:
         min_explained_variance: 0.2
         max_abs_p95: 6.0
         patience: 2
+    value_scale_controller:
+      enabled: true
+      mode: "shadow"
+      ema_beta: 0.99
+      min_samples: 4096
+      warmup_updates: 4
+      max_rel_step: 0.04
+      ev_floor: 0.3
+      ret_std_band: [0.5, 0.9]
+      gate_patience: 2
+      replay_path: "artifacts/popart_holdout.npz"
+      replay_seed: 17
+      replay_batch_size: 4096
     clip_range_warmup: 0.18
     clip_range_warmup_updates: 16
     critic_grad_warmup_updates: 0
