--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -147,12 +147,12 @@ model:
         patience: 2
     value_scale_controller:
       enabled: true
-      mode: "shadow"
+      mode: "live"
       ema_beta: 0.99
       min_samples: 4096
       warmup_updates: 4
-      max_rel_step: 0.04
-      ev_floor: 0.3
+      max_rel_step: 0.06
+      ev_floor: 0.2
       ret_std_band: [0.01, 2.0]
       gate_patience: 2
       replay_path: "artifacts/popart_holdout.npz"
