--- a/configs/config_template.yaml
+++ b/configs/config_template.yaml
@@ -70,7 +70,7 @@ model:
       hard_cap_pct: 2.0
       multiplier: 4.0
     value_scale_controller:
-      enabled: true
+      enabled: false
       mode: "shadow"
       replay_path: "artifacts/popart_holdout.npz"
       replay_seed: 17
