Disable return normalization and wire critic params

--- a/configs/config_train_spot_bar.yaml
+++ b/configs/config_train_spot_bar.yaml
@@ -62,8 +62,8 @@ model:
     turnover_norm_cap: 1.0
     reward_cap: 10.0
     value_scale_update_enabled: false
-    value_target_scale_fixed: 0.12
-    clip_range_vf: 0.15
+    clip_range_vf: 0.75
+    normalize_returns: false
     gae_lambda: 0.95
     value_scale_controller:
       enabled: false
