Disable value function clipping

--- a/configs/config_train.yaml
+++ b/configs/config_train.yaml
@@ -56,7 +56,7 @@ model:
     gae_lambda: 0.95
     clip_range: 0.10                   # не душим обновления (0.1–0.2 норма)
 
-    clip_range_vf: 0.7                 # включаем клиппинг ценности с достаточным зазором
+    clip_range_vf: null                # отключаем клиппинг ценности, чтобы не занижать дисперсию
 
     ent_coef: 0.001
     ent_coef_final: 0.001
