--- a/configs/config_train_spot_bar.yaml
+++ b/configs/config_train_spot_bar.yaml
@@ -71,19 +71,8 @@ model:
 
 
     gae_lambda: 0.95
-    value_scale_controller:
-      enabled: false
-      mode: "shadow"
-      replay_path: "artifacts/popart_holdout.npz"
-      replay_seed: 17
-      replay_batch_size: 4096
-      ema_beta: 0.99
-      min_samples: 4096
-      warmup_updates: 4
-      max_rel_step: 0.04
-      ev_floor: 0.3
-      ret_std_band: [0.01, 2.0]
-      gate_patience: 2
+    # PopArt контроллер отключён и конфигурация игнорируется.
+    value_scale_controller: {}
     reward_clip:
       adaptive: true
       atr_window: 14
