Disable no-trade scheduling by default

--- a/configs/legacy_sandbox.yaml
+++ b/configs/legacy_sandbox.yaml
@@ -19,26 +19,9 @@ sim_guards:
 # Частотный кулдаун сигналов (в секундах), как в realtime.yaml → min_signal_gap_s
 min_signal_gap_s: 300
 
-# Чёрные окна (UTC): не выдавать сигналы в указанные интервалы и вокруг funding (каждые 8ч: 00:00/08:00/16:00 UTC)
-# See ../docs/no_trade.md for details
-no_trade:
-  funding_buffer_min: 5
-  daily_utc:
-    - "00:00-00:05"
-    - "08:00-08:05"
-    - "16:00-16:05"
-  custom_ms: []   # список явных окон [{start_ts_ms: ..., end_ts_ms: ...}]
-  dynamic_guard:
-    enable: false                # turn on dynamic guard when ready
-    sigma_window: 120            # rolling window (bars) for volatility sigma
-    atr_window: 14               # ATR window (bars) for spread guard
-    vol_abs: null                # absolute volatility threshold; null to skip
-    vol_pctile: 0.99             # trigger when rolling volatility above percentile
-    spread_abs_bps: null         # absolute spread threshold in bps
-    spread_pctile: 0.99          # percentile-based spread trigger
-    hysteresis: 0.1              # relative buffer before re-enabling trading
-    cooldown_bars: 10            # bars to wait after trigger clears
-    log_reason: true             # emit log message when guard blocks trading
+# Чёрные окна (UTC) отключены по умолчанию; оставьте секцию пустой, чтобы
+# симулятор не включал маску без явного запроса.
+no_trade: {}
 
 policy:
   module: "strategies.momentum"
